# backend-case-study

./: .env.test  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  conftest.py  pyproject.toml
.github/workflows/: test.yml
app/: __init__.py  settings.py
app/healthai/: __init__.py
app/healthai/alembic/: env.py
app/healthai/alembic/versions/: 823fcb5de165_initial_migration.py  ec7121a523cd_initial_migration.py
app/healthai/models/: __init__.py  ledger.py
app/healthai/schemas/: __init__.py  ledger.py
app/healthai/src/: __init__.py  factory.py
app/healthai/src/api/: __init__.py  main.py
app/healthai/src/ledgers/: __init__.py  ledger_config.py
app/healthai/tests/: __init__.py
app/healthai/tests/e2e/: __init__.py  test_ledger.py
app/monorepo/: __init__.py
app/monorepo/api/: __init__.py  dependencies.py
app/monorepo/core/: __init__.py
app/monorepo/core/commons/: __init__.py  extend_enum_decorator.py
app/monorepo/core/db/: __init__.py  ledger_repository.py
app/monorepo/core/ledgers/: __init__.py  schemas.py
app/monorepo/core/model/: __init__.py  base.py  base_ledger.py  ledger.py  mixin.py
app/monorepo/middleware/: __init__.py  error_handler.py
app/monorepo/tests/: __init__.py
app/monorepo/tests/setup/: add_data.py  (+3 more)
app/travelai/: __init__.py
app/travelai/alembic/: env.py
app/travelai/models/: __init__.py  ledger.py
app/travelai/schemas/: __init__.py  ledger.py
app/travelai/src/: __init__.py  factory.py
app/travelai/tests/: __init__.py
docs/: 01_getting_started.md  02_migrations.md  03_test.md
scripts/: test-setup.sh
(+29 files in other folders)
